--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         frameworkUrl: buildUrl + "/Beeg Jump.framework.js",
         codeUrl: buildUrl + "/Beeg Jump.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "Jump Games",
+        companyName: "Jump",
         productName: "Beeg Jump",
         productVersion: "1.0",
         showBanner: unityShowBanner,
